# pico-vscode-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
toolchains/: gcc-arm-none-eabi_toolchain.cmake
